--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_background_service
+name: flutter_background_service_app
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -40,6 +40,12 @@ dependencies:
   shared_preferences: ^2.2.1
   geolocator: ^10.0.0
   flutter_local_notifications: ^15.1.1
+  flutter_background_service: ^5.0.1
+  flutter_background_service_android: ^6.0.1
+  rename: ^2.1.1
+  device_info_plus: ^9.0.3
+  dio: ^5.3.2
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
